Complete Java17 backport with core JSON API and full test suite
- Set up Gradle project structure targeting Java 17
- Copied all core JSON API classes from Java21 version
- Copied complete test suite
- Adapted Java 21-specific features for Java 17:
  * Replaced LinkedHashMap.newLinkedHashMap() with constructor
  * Replaced List.getFirst() with get(0) in tests
  * Removed redundant instanceof patterns
- Enabled preview features for pattern matching in switch
- All 27 tests passing
- Updated README with usage examples and documentation

Co-authored-by: simbo1905 <322608+simbo1905@users.noreply.github.com>